# task-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
config/nginx/: default.conf
config/pgbouncer/: pgbouncer.ini  userlist.txt
migrations/: env.py
migrations/versions/: 3ed041e046e9_.py
src/api/: dependencies.py  routers.py  schemas.py
src/api/health/: router.py
src/api/tasks/: router.py  schemas.py
src/main/container/: app.py
src/main/web_api/: app.py
src/modules/tasks/application/: __init__.py
src/modules/tasks/application/commands/: __init__.py  create_task.py  delete_task.py  update_task.py
src/modules/tasks/application/queries/: __init__.py  get_task_details.py  get_tasks.py  map_task_to_dto.py
src/modules/tasks/domain/: entities.py  repositories.py  value_objects.py
src/modules/tasks/infra/: repositories.py
src/seedwork/: config.py
src/seedwork/application/: application.py  application_module.py  commands.py  messages.py  providers.py  queries.py  uows.py
src/seedwork/infra/: db.py  repositories.py
src/seedwork/utils/: functional.py
tests/tasks/load/: test_get_tasks.py
