[project]
name = "task-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Eric",email = "rozanov7475@yandex.by"}
]
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
locust = "^2.33.2"
black = "^25.1.0"
poethepoet = "^0.33.1"

[tool.poe.env]
PYTHONPATH             = "src"
DC                     = "docker compose -f docker-compose.dev.yml"
DC_PROD                = "docker compose -f docker-compose.prod.yml"
EXEC                   = "docker exec -it"

[tool.poe.tasks]
test             = "pytest"
start            = "uvicorn --factory main.web_api.app:create_app --reload --port 8080 --host 0.0.0.0"
start_prod       = "uvicorn --factory main.web_api.app:create_app --port 8080 --host 0.0.0.0 --workers 8"
makemigrations   = "alembic revision --autogenerate"
migrate          = "alembic upgrade head"
up               = "$DC up --build"
up_prod          = "$DC_PROD up --build"
down             = "$DC down"
down_prod        = "$DC_PROD down"


[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
